fix padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@ body {
     min-height: 100vh;
     position: relative;
     margin: 0;
+    padding-right: 0;
+    padding-left: 0;
     padding-bottom: 4rem;   
 }
 
@@ -294,6 +296,7 @@ h3 {
     color: #3f3f3f;
     font-weight: 700;
     border-radius: 25px;
+    width: 15rem;
 }
 
 /* ------------------------- Footer */
